# swissADT

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
cgdetr/: __init__.py  moment_retrieval.py
cgdetr/cg_detr/: model.py  transformer.py
cgdetr/run_on_video/: data_utils.py  model_utils.py
example/: example.jsonl
swiss_adt/: __init__.py  translator.py  video_processor.py
